# fast_api_online_cinema_project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.celery  README.md  docker-compose.yml  pyproject.toml  setup.cfg  task-definition.json
.github/workflows/: deploy.yml
database/models/: accounts.py
database/source/: movies.db
database/validators/: accounts.py
infrastructure/: main.tf
nginx/: Dockerfile  nginx.conf
security/: interfaces.py
src/: celery_app.py  celery_beat_schedule.py  main.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  session_postgres.py  session_sqlite.py  utils.py
src/database/models/: accounts.py  cart.py  movies.py  notifications.py  orders.py  payments.py
src/database/source/: movies.db  (+1 more)
src/dependencies/: accounts.py  auth.py  cart.py  movies.py  orders.py  payments.py  storage.py
src/exceptions/: cart.py  email.py  orders.py  profiles.py
src/providers/: payment_provider.py  stripe_payment_provider.py
src/repositories/: accounts.py  base.py  comments.py  favorites.py  likes.py  movies.py  notifications.py  profiles.py
src/routes/: accounts.py  cart.py  certifications.py  directors.py  genres.py  movies.py  orders.py  stars.py
src/schemas/: accounts.py  cart.py  movies.py  notifications.py  orders.py  payments.py
src/security/: passwords.py  permissions.py  token_manager.py
src/services/: accounts.py  base.py  emails.py
src/tasks/: accounts.py
src/templates/: activation_complete.html  password_reset_request.html
src/tests/: conftest.py  test_accounts.py  test_movies_integration.py  test_orders_new.py  test_payments.py
src/validation/: profile.py
(+34 files in other folders)
