[project]
name = "fast-api-online-cinema-project"
version = "0.1.0"
description = "An online cinema is a digital platform that allows users to select, watch, and purchase access to movies and other video materials via the internet."
authors = [
    {name = "Mykyta Fedotov", email = "nikita.fedotov222@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pycryptodome (>=3.22.0,<4.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "boto3 (>=1.35.39,<2.0.0)",
    "aioboto3 (>=14.1.0,<15.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "fakeredis (>=2.28.1,<3.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-lazy-fixture (>=0.6.3,<0.7.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "stripe (>=12.0.1,<13.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
